--- a/IntervalTimer/Sources/IntervalTimer/main.page
+++ b/IntervalTimer/Sources/IntervalTimer/main.page
@@ -1,6 +1,6 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
 <xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmi:id="0.6" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
-  <widgets:Page name="main ">
+  <widgets:Page name="main">
     <minArea width="414" height="736"/>
     <location/>
     <backgroundColor/>
@@ -28,7 +28,7 @@
     </children>
     <children xsi:type="widgets:RowView" paddingLeft="5" name="rowView" paddingRight="5" paddingTop="25" paddingBottom="5">
       <children xsi:type="widgets:Button" text="START" paddingLeft="20" name="startButton" horizontalAlignment="CENTER" paddingRight="20">
-        <font fontFamily="ArialMT" size="20">
+        <font fontFamily="Arial" size="20">
           <color Red="68" Green="106" Blue="179"/>
         </font>
         <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
